
syntax = "proto3";


message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string message = 1;
}

message ManyHelloRequest {
  string name = 1;
  int32 count = 2;
}

message ManyHelloResponse {
  string message = 1;
}

message BatchHelloWorldResponse {
  repeated HelloWorldResponse responses = 1;
}

service HelloWorldService {
  rpc SayHello(HelloWorldRequest) returns (HelloWorldResponse);
  rpc SayManyHello(ManyHelloRequest) returns (stream ManyHelloResponse);
  rpc StreamHello(stream HelloWorldRequest) returns (stream HelloWorldResponse);
  rpc BatchHello(stream HelloWorldRequest) returns (BatchHelloWorldResponse);
}
